2005-03-09  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-09  Robert Schuster <thebohemian@gmx.net>

        * java/awt/AWTEvent.java (toString): Added case
        for source not being an AWT component.

2005-03-09  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-08 David Gilbert <david.gilbert@object-refinery.com>

        * java/awt/Font.java (decode): Handle null argument and allow
        space as delimiter.

2005-03-09  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-07  Chris Burdess  <dog@gnu.org>

        * gnu/java/net/protocol/https/Handler.java: New file.

2005-03-09  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-07  Jeroen Frijters  <jeroen@frijters.net>

        * java/net/URI.java (AUTHORITY_REGEXP): Corrected regexp.
        (AUTHORITY_USERINFO_GROUP,AUTHORITY_HOST_GROUP,AUTHORITY_PORT_GROUP):
        Adjusted to match new regexp.

2005-03-09  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-07  Jeroen Frijters  <jeroen@frijters.net>

        * java/io/DataInputStream.java (ignoreInitialNewline): Removed
        (readLine): Changed newline handling.

2005-03-08  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-04  Roman Kennke  <roman@ontographics.com>

        * javax/swing/text/rtf/ControlWordToken.java: New file.
        * javax/swing/text/rtf/RTFEditorKit.java: New file.
        * javax/swing/text/rtf/RTFParseException.java: New file.
        * javax/swing/text/rtf/RTFParser.java: New file.
        * javax/swing/text/rtf/RTFScanner.java: New file.
        * javax/swing/text/rtf/TextToken.java: New file.
        * javax/swing/text/rtf/Token.java: New file.

2005-03-08  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-08  Audrius Meskauskas  <audriusa@bluewin.ch>

        * org/omg/CORBA/BooleanHolder.java,
        org/omg/CORBA/ByteHolder.java,