@@ -2,6 +2,14 @@
 
 	Resynced with GNU Classpath.
 
+	2005-03-09  Michael Koch  <konqueror@gmx.de>
+
+        * org/omg/CORBA/AnyHolder.java: Added missing import.
+
+2005-03-09  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-03-09  Robert Schuster <thebohemian@gmx.net>
 
         * java/awt/AWTEvent.java (toString): Added case
